--- a/app/catalog.html
+++ b/app/catalog.html
@@ -805,7 +805,39 @@
 
 		<div class="main">
 			<div class="container">
-				<div class="block catalog">
+					<div class="block catalog tablet">
+							<div class="catalog-main-head">
+									<div class="catalog-main-head-breadcrumbs">
+										<div class="breadcrumbs">
+											<a href="#" class="breadcrumbs__item">Коллекция</a>
+											<a href="#" class="breadcrumbs__item">Диваны</a>
+											<a href="#" class="breadcrumbs__item">Фэнтази</a>
+										</div>
+									</div>
+									<div class="catalog-main-head-sort">
+										Сортировать по:
+										<select class="filter-sort">
+											<option>По популярности</option>
+											<option>По названию</option>
+											<option>По цене</option>
+											<option>По новинкам</option>
+										</select>
+									</div>
+									<div class="catalog-main-head-grid">
+										<div class="catalog-main-head-grid__item catalog-main-head-grid__blocks active">
+											<svg width="15" height="16" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+												<path fill-rule="evenodd" clip-rule="evenodd" d="M0.790527 2C0.790527 0.89543 1.68596 0 2.79053 0H4.86318C5.96775 0 6.86318 0.895431 6.86318 2V5C6.86318 6.10457 5.96775 7 4.86318 7H2.79053C1.68596 7 0.790527 6.10457 0.790527 5V2ZM2.79053 9C1.68596 9 0.790527 9.89543 0.790527 11V14C0.790527 15.1046 1.68596 16 2.79053 16H4.86318C5.96775 16 6.86318 15.1046 6.86318 14V11C6.86318 9.89543 5.96775 9 4.86318 9H2.79053ZM10.5983 9C9.49372 9 8.59829 9.89543 8.59829 11V14C8.59829 15.1046 9.49372 16 10.5983 16H12.6709C13.7755 16 14.6709 15.1046 14.6709 14V11C14.6709 9.89543 13.7755 9 12.6709 9H10.5983ZM10.5983 0C9.49372 0 8.59829 0.89543 8.59829 2V5C8.59829 6.10457 9.49372 7 10.5983 7H12.6709C13.7755 7 14.6709 6.10457 14.6709 5V2C14.6709 0.895431 13.7755 0 12.6709 0H10.5983Z"/>
+											</svg>
+										</div>
+										<div class="catalog-main-head-grid__item catalog-main-head-grid__list">
+											<svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+												<path fill-rule="evenodd" clip-rule="evenodd" d="M1.82904 0C0.870799 0 0.0939941 0.776805 0.0939941 1.73504V2.26496C0.0939941 3.22319 0.870799 4 1.82904 4C2.78727 4 3.56408 3.2232 3.56408 2.26496V1.73504C3.56408 0.776805 2.78727 0 1.82904 0ZM1.82904 6C0.870799 6 0.0939941 6.7768 0.0939941 7.73504V8.26496C0.0939941 9.2232 0.870799 10 1.82904 10C2.78727 10 3.56408 9.2232 3.56408 8.26496V7.73504C3.56408 6.7768 2.78727 6 1.82904 6ZM0.0939941 13.735C0.0939941 12.7768 0.870799 12 1.82904 12C2.78727 12 3.56408 12.7768 3.56408 13.735V14.265C3.56408 15.2232 2.78727 16 1.82904 16C0.870799 16 0.0939941 15.2232 0.0939941 14.265V13.735ZM13.9744 13H5.29915V15H13.9744V13ZM5.29915 7H13.9744V9H5.29915V7ZM13.9744 1H5.29915V3H13.9744V1Z"/>
+											</svg>
+										</div>
+									</div>
+								</div>
+					</div>
+				<div class="block catalog">						
 					<div class="filter-mob">
 						<div class="filter-mob-head">Диваны</div>
 						<div class="filter-mob-row">
