--- a/app/about.html
+++ b/app/about.html
@@ -796,7 +796,7 @@
 
 		<div class="main">
 			<div class="container">
-				<div class="block">
+				<div class="block about">
 					<div class="block-head">О компании</div>
 					<div class="about-block">
 						<div class="about-block-text">
