--- a/app/collection.html
+++ b/app/collection.html
@@ -810,7 +810,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="block">
+				<div class="block collections-tablet">
 					<div class="block-head-mini">Описание и преимущества</div>
 					<div class="block-text">Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое. Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на верхушке которого еле держалось готовое вот-вот окончательно сползти одеяло. </div>
 				</div>
