--- a/app/contacts.html
+++ b/app/contacts.html
@@ -800,7 +800,7 @@
 					<div class="block-head">Контакты</div>
 					<img src="img/contacts.png" class="contacts-img-big">
 				</div>
-				<div class="block">
+				<div class="block contacts">
 					<div class="contacts-info">
 						<div class="contacts-info-column">
 							<div class="contacts-info-column-row">
