--- a/app/designers.html
+++ b/app/designers.html
@@ -796,7 +796,7 @@
 
 		<div class="main">
 			<div class="container">
-				<div class="block designers">
+				<div class="block designers-tablet">
 					<div class="block-head">Дизайнеры</div>
 					<div class="search-tags">
 						<div class="search-tags-name">Поиск по тегу:</div>
