--- a/app/mechanics.html
+++ b/app/mechanics.html
@@ -796,7 +796,7 @@
 
 		<div class="main">
 			<div class="container">
-				<div class="block">
+				<div class="block mechanics-tablet">
 					<div class="block-head">Механизмы</div>
 					<div class="mech-row">
 						<div class="mech-row-gallery">
