--- a/app/principels.html
+++ b/app/principels.html
@@ -796,7 +796,7 @@
 
 		<div class="main">
 			<div class="container">
-				<div class="block">
+				<div class="block principels-tablet">
 					<div class="block-head">Принципы</div>
 					<div class="principels-block">
 						<div class="principels-block-head">Миссия</div>
