tablet-adaptive-finish

--- a/app/stock-and-offers.html
+++ b/app/stock-and-offers.html
@@ -796,7 +796,7 @@
 
 		<div class="main">
 			<div class="container">
-				<div class="block">
+				<div class="block stock-and-offers-tablet">
 					<div class="block-head discount-head">
 						<div class="discount-head-background">
 							<div class="discount-head-text">Горящие предложения</div>
@@ -819,7 +819,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="block">
+				<div class="block stock-and-offers-tablet">
 					<div class="block-head discount-head">
 						<div class="discount-head-background discount-head-background_2">
 							<div class="discount-head-text">Акции</div>
