--- a/app/where-buy.html
+++ b/app/where-buy.html
@@ -799,7 +799,7 @@
 				<div id="map" style="width: 100%; height: 400px;"></div>
 			</div>
 			<div class="container">
-				<div class="block">
+				<div class="block where-buy-tablet">
 					<div class="where-buy-big active">
 						<div class="where-buy-big-img">
 							<div class="where-buy-big-img__item active">
@@ -971,7 +971,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="block">
+				<div class="block where-buy-tablet">
 					<div class="where-buy-small">
 						<div class="where-buy-small-item">
 							<div class="where-buy-small-item__img"><img src="img/where-buy-small-1.png"></div>
